RESOLVED FIXED21217
Animations assert when navigating from page
https://bugs.webkit.org/show_bug.cgi?id=21217
Summary Animations assert when navigating from page
Dean Jackson
Reported 2008-09-29 12:33:50 PDT
The Leaves example asserts when navigating from the page (to another page with animation) ASSERTION FAILED: !running() (WebCore/page/animation/AnimationBase.cpp:704 void WebCore::AnimationBase::updateStateMachine(WebCore::AnimationBase::AnimStateInput, double))
Attachments
zipfile of leaves example (162.67 KB, application/octet-stream)
2008-09-29 12:37 PDT, Dean Jackson
no flags
Patch to fix bug (2.68 KB, patch)
2008-09-29 18:59 PDT, Chris Marrin
darin: review+
Dean Jackson
Comment 1 2008-09-29 12:37:03 PDT
Created attachment 23914 [details] zipfile of leaves example
Chris Marrin
Comment 2 2008-09-29 18:59:04 PDT
Created attachment 23929 [details] Patch to fix bug
Chris Marrin
Comment 3 2008-09-29 19:00:07 PDT
I haven't added a testcase to the patch, because I don't know how I would write an automated test for it. You need to open one file, then open another and then hit the back button. I'm not sure how you would automate that.
mitz
Comment 4 2008-09-30 17:02:57 PDT
(In reply to comment #3) > I haven't added a testcase to the patch, because I don't know how I would write > an automated test for it. You need to open one file, then open another and then > hit the back button. I'm not sure how you would automate that. Here is something to try: have a "test driver" document that loads the first document in an iframe, then navigates to the second document in the same iframe, then invokes the history.back method in the iframe. (Before you begin, see if the bug reproduces with an iframe).
Darin Adler
Comment 5 2008-10-09 10:40:09 PDT
Comment on attachment 23929 [details] Patch to fix bug r=me
Chris Marrin
Comment 6 2008-10-09 17:00:15 PDT
Sending WebCore/ChangeLog Sending WebCore/page/animation/AnimationBase.cpp Transmitting file data .. Committed revision 37454.
Note You need to log in before you can comment on or make changes to this bug.