2008-10-09  Chris Marrin  <cmarrin@apple.com>

Reviewed by Darin Adler.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=21217
        Animations assert when navigating from page

        Changed assertions to test the right flag for the paused state

        * page/animation/AnimationBase.cpp:
        (WebCore::AnimationBase::updateStateMachine):



Canonical link: https://commits.webkit.org/29699@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37454 268f45cc-cd09-0410-ab3c-d52691b4dbfc